# Evidence

./: .gitignore  AGENTS.md  Cargo.toml  README.md  commitlint.config.cjs  lint-staged.config.mjs  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tsconfig.base.json  tsconfig.json
.agents/skills/vercel-react-view-transitions/: AGENTS.md  SKILL.md
.evidence/: README.md
.evidence/associations/: diagram-contains-edges.md  diagram-contains-nodes.md  diagram-edge-references-logical-relationship.md  diagram-has-edges.md  diagram-has-nodes.md  diagram-has-versions.md  diagram-node-parent.md  diagram-node-references-logical-entity.md  diagram-node-references-parent-node.md  e-contract-to-delivery-request.md  e-contract-to-invoice-request.md  e-contract-to-money.md  e-contract-to-payment-request.md  e-contract-to-role-buyer.md  e-contract-to-role-receiver.md  e-contract-to-role-supplier.md  e-contract-to-thing-laptop.md  e-delivery-confirmation-to-evidence.md  e-delivery-confirmation-to-thing.md  e-delivery-note-to-thing-hidden.md  e-delivery-request-to-confirmation.md  e-delivery-request-to-thing.md  e-invoice-confirmation-to-evidence.md  e-invoice-request-to-confirmation.md  e-invoice-to-money-hidden.md  e-invoice-to-platform.md  e-payment-confirmation-to-evidence.md  e-payment-confirmation-to-invoice-request.md  e-payment-confirmation-to-money.md  e-payment-evidence-to-bank.md  e-payment-request-to-confirmation.md  e-payment-request-to-money.md  e-payment-voucher-to-money-hidden.md  e-proposal-to-contract.md  e-proposal-to-proposal-evidence.md  e-proposal-to-thing-hidden.md  e-rfp-to-proposal.md  e-rfp-to-rfp-evidence.md  e-rfp-to-thing-hidden.md  e-role-buyer-to-party-buyer.md  (+18 more)
.evidence/entities/: confirmation-delivery.md  confirmation-invoice.md  confirmation-payment.md  contract-laptop-purchase.md  ctx-contract.md  ctx-pre-contract.md  diagram-edge.md  diagram-node.md  diagram-version.md  diagram.md  evidence-delivery-note.md  evidence-invoice.md  evidence-payment-voucher.md  evidence-proposal-attachment.md  evidence-rfp-email.md  logical-entity.md  logical-relationship.md  member.md  party-buyer-company.md  party-supplier-company.md  proposal-laptop.md  request-delivery.md  request-invoice.md  request-payment.md  rfp-laptop.md  role-buyer.md  role-receiver.md  role-supplier.md  thing-laptop.md  thing-payment-money.md  third-bank-system.md  third-invoice-platform.md  user.md  workspace.md
.github/workflows/: ci.yml  desktop-release.yml
.pi/extensions/: evidence-domain-architect.ts
apps/desktop/: package.json  project.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/server/: Cargo.toml  project.json
apps/server-nest/: package.json  prisma.config.ts  project.json  tsconfig.app.json  vite.config.mts  vitest.config.mts
apps/server-nest/prisma/: schema.prisma
apps/server-nest/src/: main.ts
apps/server/src/: lib.rs  main.rs
apps/server/src/api/: diagrams.rs  error.rs  links.rs  loaders.rs  logical_entities.rs  mod.rs  pagination.rs  sidebar.rs  user_workspaces.rs  users.rs  workspace_members.rs
apps/server/src/api/model/: mod.rs  user_model.rs  workspace_model.rs
apps/server/src/domain/: error.rs  logical_entity.rs  member.rs  mod.rs  user.rs  user_workspaces.rs  users.rs  workspace.rs
apps/server/src/domain/core/: entity.rs  ref.rs
apps/server/src/domain/diagram/: diagram.rs  diagram_nodes.rs  edge.rs  mod.rs  node.rs  types.rs  workspace_diagrams.rs
apps/server/src/migration/: m20260525_000001_create_users.rs  m20260525_000005_create_logical_entities.rs  m20260525_000006_create_diagram_nodes.rs  m20260525_000007_create_diagram_edges.rs  m20260525_000008_create_diagram_versions.rs
apps/server/src/persistent/: diagram_edges.rs  diagram_nodes.rs  diagram_versions.rs  entities.rs  logical_entities.rs  memory.rs  mod.rs  store.rs  test_support.rs  user_workspaces.rs  users.rs  workspace_diagrams.rs  workspace_members.rs
apps/web/: package.json  project.json  tsconfig.app.json  vite.config.mts
contracts/: api.yaml
libs/api-client/: package.json  project.json  tsconfig.lib.json  vitest.config.mts
libs/server/api/: Cargo.toml  project.json
libs/server/api/src/: lib.rs
libs/server/api/src/api/: diagrams.rs  error.rs  links.rs  loaders.rs  logical_entities.rs  logical_relationships.rs  mod.rs  openapi.rs  root.rs  sidebar.rs  user_workspaces.rs  users.rs  vendor_media.rs  workspace_members.rs
libs/server/api/src/api/model/: diagram_model.rs  edge_model.rs  logical_entity_model.rs  logical_relationship_model.rs  member_model.rs  mod.rs  node_model.rs  workspace_model.rs
libs/server/persistent/: Cargo.toml  project.json
libs/server/persistent/src/: lib.rs
libs/server/persistent/src/migration/: m20260525_000002_create_workspaces.rs  m20260525_000003_create_members.rs  m20260525_000004_create_diagrams.rs  m20260525_000008_create_diagram_versions.rs  m20260526_000009_migrate_diagram_node_position_object.rs  m20260526_000010_migrate_diagram_node_payload_names.rs  m20260526_000011_migrate_diagram_edge_style.rs  m20260526_000012_expand_diagram_edges.rs  m20260526_000013_create_logical_relationships.rs  m20260526_000014_add_diagram_edge_logical_relationship.rs  mod.rs
libs/server/persistent/src/persistent/: diagram_edges.rs  diagram_nodes.rs  entities.rs  logical_entities.rs  logical_relationships.rs  mod.rs  store.rs  test_support.rs  user_workspaces.rs  users.rs  workspace_diagrams.rs  workspace_members.rs
libs/ui/: README.md  package.json  project.json  tsconfig.json  tsconfig.lib.json  tsconfig.spec.json  vite.config.mts
libs/web-feature-diagrams/: README.md  project.json  tsconfig.lib.json  vite.config.mts
libs/web-feature-resource-browser/: package.json  project.json  tsconfig.lib.json  vite.config.mts
libs/web-shell/: package.json  project.json  vite.config.mts
libs/web-ui/: README.md  package.json  project.json  vite.config.mts
(+379 files in other folders)
