[package]
name = "evidence-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
postgres-tests = ["dep:testcontainers", "dep:testcontainers-modules"]

[dependencies]
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
sea-orm = { version = "1", default-features = false, features = ["macros", "runtime-tokio-rustls", "sqlx-postgres", "with-json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
testcontainers = { version = "0.25", optional = true }
testcontainers-modules = { version = "0.13", features = ["postgres"], optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
