[package]
name = "evidence-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["postgres"]
postgres = ["evidence-server-persistent/postgres"]
sqlite = ["evidence-server-persistent/sqlite"]
postgres-tests = ["evidence-server-persistent/postgres-tests"]
sqlite-tests = ["evidence-server-persistent/sqlite-tests"]

[dependencies]
evidence-server-api = { path = "../../libs/server/api" }
evidence-server-domain = { path = "../../libs/server/domain" }
evidence-server-infrastructure = { path = "../../libs/server/infrastructure" }
evidence-server-persistent = { path = "../../libs/server/persistent", default-features = false }
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
