[package]
name = "evidence-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "evidence_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
axum = "0.8"
evidence-server = { path = "../../server", default-features = false, features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["net"] }
