[package]
name = "evidence-server-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
evidence-server-domain = { path = "../domain" }
async-stream = "0.3"
async-trait = "0.1"
axum = "0.8"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "trace"] }

[dev-dependencies]
evidence-server-persistent = { path = "../persistent", features = ["test-support"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
